<resources>
    <string name="app_name">HDoctor</string>
    <string name="network_error">网络连接失败</string>
    <string name="text_null"></string>
    <string name="rmb_unit">元</string>
    <string name="btn_index">首页</string>
    <string name="btn_shopping">中间</string>
    <string name="btn_activity">无名</string>
    <string name="btn_mine">我的</string>
    <string name="doctor_login_title_main">医生登陆</string>
    <string name="patient_login_title_main">普通登录</string>
    <string name="doctor_login_type">医生入口</string>
    <string name="patient_login_type">用户入口</string>
    <string name="doctor_register">注册成为医生</string>
    <string name="patient_register">注册成为新用户</string>
    <string name="forget_password">找回密码</string>
    <string name="phone_area">中国大陆+86</string>
    <string name="phone_hint">请输入手机号码</string>
    <string name="password_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="doctor_register_title_main">医生注册</string>
    <string name="upload_head">上传头像</string>
    <string name="doctor_username">真实姓名</string>
    <string name="doctor_hospital">所属医院</string>
    <string name="doctor_subject">所属科室</string>
    <string name="doctor_work_phone">工作电话</string>
    <string name="next_step">下一步</string>
    <string name="doctor_register_name">账号</string>
    <string name="doctor_register_password">密码</string>
    <string name="doctor_register_check">验证码</string>
    <string name="doctor_register_get_verify">获取验证码</string>
    <string name="register_end">秒后重获</string>
    <string name="register">注册</string>
    <string name="register_phone_hint">请输入密码</string>
    <string name="register_phone_hint_again">请再次输入密码</string>
    <string name="register_password_diff">两次密码输入不同</string>
    <string name="register_info_empty">填写不能为空</string>
    <string name="register_credentials">身份证</string>
    <string name="register_credentials_prompt">请上传身份证下面照片</string>
    <string name="register_certificate">医生职业资格证</string>
    <string name="register_certificate_prompt">请上传医生职业资格证</string>
    <string name="register_work_card">医院工作证</string>
    <string name="register_work_card_prompt">请上传能以证明所属医院职称的（工牌、名片、工作证明）照片</string>
    <string name="register_check_prompt">您的信息不会被公开，公用于审核使用</string>
    <string name="register_complete">提交审核</string>
    <string name="doctor_username_ex">张德华</string>
    <string name="doctor_hospital_ex">爱德华医院</string>
    <string name="doctor_subject_ex">妇产科</string>
    <string name="doctor_work_phone_ex">021－60323030</string>
    <string name="doctor_statistics_title_main">统计</string>
    <string name="doctor_visitor_total">总访客</string>
    <string name="doctor_visitor_total_ex">301</string>
    <string name="doctor_patient_total">总患者</string>
    <string name="doctor_patient_total_ex">52</string>
    <string name="doctor_today">今天</string>
    <string name="doctor_yesterday">昨日</string>
    <string name="doctor_tj_unit">访客</string>
    <string name="doctor_patient">患者</string>
    <string name="doctor_title_main">工作台</string>
    <string name="doctor_menu_gzt">工作台</string>
    <string name="doctor_menu_qz">圈子</string>
    <string name="doctor_menu_wo">我</string>
    <string name="doctor_today_visitor">今日访客</string>
    <string name="doctor_today_patient">今日患者</string>
    <string name="doctor_today_visitor_ex">0</string>
    <string name="doctor_today_patient_ex">0</string>
    <string name="doctor_phone_consult">电话咨询</string>
    <string name="doctor_online_consult">在线咨询</string>
    <string name="doctor_reserve_consult">预约咨询</string>
    <string name="doctor_bl_center">病例中心</string>
    <string name="doctor_yy_center">预约中心</string>
    <string name="doctor_cz_setting">出诊设置</string>
    <string name="doctor_fw_manager">服务管理</string>
    <string name="doctor_zx_list_title_main">咨询列表</string>
    <string name="doctor_blgl_title_main">病例管理</string>
    <string name="all_order">全部</string>
    <string name="delay_order">待处理</string>
    <string name="complete_order">已处理</string>
    <string name="blgl_item_name">大布丁</string>
    <string name="blgl_item_sex">男</string>
    <string name="blgl_item_age">岁</string>
    <string name="blgl_item_time">9分钟前</string>
    <string name="blgl_item_illness">疾病：</string>
    <string name="blgl_item_description">描述：</string>
    <string name="blgl_item_reserve_type_label">类型：</string>
    <string name="blgl_item_reserve_type">预约咨询</string>
    <string name="blgl_item_reserve_price_unit">元</string>
    <string name="blgl_item_pay">已支付</string>
    <string name="blgl_item_do">处理</string>
    <string name="blgl_info_data">查看资料</string>
    <string name="blgl_info_reply">确认并回复</string>
    <string name="blgl_item_illness_ex">前列腺炎</string>
    <string name="blgl_item_description_ex">肠胃不适，虚汗频发，多梦失眠！</string>
    <string name="doctor_yygl_title_main">预约中心</string>
    <string name="yygl_bar_all_order">全部</string>
    <string name="yygl_bar_add">今日新增</string>
    <string name="yygl_bar_arrive">今日到诊</string>
    <string name="yygl_item_time">2015-07-15</string>
    <string name="yygl_item_hour">15:00</string>
    <string name="yygl_item_confirm">确认</string>
    <string name="doctor_czgl_title_main">出诊设置</string>
    <string name="doctor_czgl_time">出诊时间</string>
    <string name="doctor_czgl_time_ex">周一，周三，周五</string>
    <string name="doctor_czgl_yy_count">最大预约量</string>
    <string name="doctor_czgl_yy_count_ex">30</string>
    <string name="doctor_cagl_stop_diagnose">暂停接诊</string>
    <string name="doctor_cagl_start_diagnose">开始接诊</string>
    <string name="doctor_dnum_empty">预约量不能为空</string>
    <string name="doctor_cz_success">保存成功</string>
    <string name="week_cancel">取消</string>
    <string name="week_confirm">确定</string>
    <string name="week_title">选择出诊时间</string>
    <string name="one">周一</string>
    <string name="two">周二</string>
    <string name="three">周三</string>
    <string name="four">周四</string>
    <string name="five">周五</string>
    <string name="six">周六</string>
    <string name="seven">周日</string>
    <string name="everyday">每天</string>
    <string name="doctor_ffgl_title_main">服务管理</string>
    <string name="doctor_ffgl_zxzx">在线咨询</string>
    <string name="doctor_ffgl_dhzx">电话咨询</string>
    <string name="doctor_ffgl_yyzx">预约咨询</string>
    <string name="doctor_ffgl_add">已添加</string>
    <string name="doctor_ffgl_no_add">未添加</string>
    <string name="doctor_ffgl_info_price">收费标准：</string>
    <string name="doctor_ffgl_info_switch">服务开启</string>
    <string name="doctor_ffgl_info_price_ex">5</string>
    <string name="doctor_ffgl_info_unit">元/次</string>
    <string name="doctor_ffgl_info_save">保存</string>
    <string name="doctor_ffgl_info_prompt">填写价格不能为空</string>
    <string name="doctor_personal_title_main">个人中心</string>
    <string name="doctor_personal_name">盗版哥</string>
    <string name="doctor_personal_income">累计收入</string>
    <string name="doctor_personal_income_ex">2000元</string>
    <string name="doctor_personal_zhzx">账户中心</string>
    <string name="doctor_personal_szzx">设置中心</string>
    <string name="doctor_personal_wdzl">我的资料</string>
    <string name="doctor_personal_info_head">头像</string>
    <string name="doctor_personal_info_name">姓名</string>
    <string name="doctor_personal_info_intro">简介</string>
    <string name="doctor_personal_info_skilled">擅长</string>
    <string name="doctor_personal_info_hospital">医院</string>
    <string name="doctor_personal_info_subject">科室</string>
    <string name="doctor_personal_info_job">职称</string>
    <string name="doctor_personal_info_certificate">身份证</string>
    <string name="doctor_personal_info_email">邮箱</string>
    <string name="open_photo">图片库</string>
    <string name="open_camera">拍照</string>
    <string name="photo_cancel">取消</string>
    <string name="shenfen_prompt">请上传身体证照片</string>
    <string name="zige_prompt">请上传医生职业资格证照片</string>
    <string name="gongzuo_prompt">请上传医院工作证照片</string>
    <string name="doctor_personal_info_name_ex">盗版哥</string>
    <string name="doctor_personal_info_intro_ex">个人的简介</string>
    <string name="doctor_personal_info_skilled_ex">外科</string>
    <string name="doctor_personal_info_hospital_ex">人民医院</string>
    <string name="doctor_personal_info_subject_ex">急诊室</string>
    <string name="doctor_personal_info_job_ex">主治医生</string>
    <string name="doctor_circle_title_main">圈子</string>
    <string name="doctor_circle_sq">公共社区</string>
    <string name="doctor_circle_ysq">医生圈</string>
    <string name="doctor_circle_hy">好友</string>
    <string name="doctor_circle_xx">消息</string>
    <string name="doctor_circle_item_content">昨天我刚刚下载的这款APP可以时时关注自已的健康状况，整的很好用，推荐给你们不用谢！嘿嘿！</string>
    <string name="doctor_circle_item_count">123</string>
    <string name="doctor_circle_info_main">内容</string>
    <string name="doctor_circle_info_reply_content">挺好的！</string>
    <string name="doctor_circle_info_reply_time">2015-06-15</string>
    <string name="doctor_circle_info_friend">好友</string>
    <string name="doctor_circle_info_doctor">医生</string>
    <string name="doctor_circle_info_friend_name">大布丁</string>
    <string name="doctor_circle_info_friend_remark">这里是个性签名</string>
    <string name="doctor_circle_info_friend_add">添加</string>
    <string name="doctor_circle_info_message_last_comment">Hello 在吗？Doctor 李</string>
    <string name="doctor_circle_info_message_last_comment_time">13分钟前</string>
    <string name="patient_register_title_main">普通注册</string>
    <string name="patient_register_info_head">点击设置头像</string>
    <string name="patient_register_info_name">姓名</string>
    <string name="patient_register_info_intro">简介</string>
    <string name="patient_register_info_skilled">擅长</string>
    <string name="patient_register_info_hospital">医院</string>
    <string name="patient_register_info_subject">科室</string>
    <string name="patient_register_info_job">职称</string>
    <string name="patient_register_info_certificate">身份证</string>
    <string name="patient_register_info_email">邮箱</string>
    <string name="patient_register_info_name_ex">请输入姓名</string>
    <string name="patient_register_info_intro_ex">请输入简介</string>
    <string name="patient_register_info_skilled_ex">请输入擅长</string>
    <string name="patient_register_info_hospital_ex">请输入医院</string>
    <string name="patient_register_info_subject_ex">请输入科室</string>
    <string name="patient_register_info_job_ex">请输入职称</string>
    <string name="patient_register_info_certificate_ex">请输入身份证</string>
    <string name="patient_register_info_email_ex">请输入邮箱</string>
    <string name="patient_menu_jk">健康</string>
    <string name="patient_menu_ys">医生</string>
    <string name="patient_menu_qz">圈子</string>
    <string name="patient_menu_wo">我</string>
    <string name="patient_jk_zwzd">自我诊断</string>
    <string name="patient_jk_fxbg">分析报告</string>
    <string name="patient_jk_jkda">健康档案</string>
    <string name="patient_jk_jktx">健康提醒</string>
    <string name="patient_jk_wdyx">我的药箱</string>
    <string name="patient_jk_fjys">附近医生</string>
    <string name="patient_jk_zxkf">咨询客服</string>
    <string name="doctor_doc_info_dt">他的动态</string>
    <string name="doctor_doc_info_remark">签名</string>
    <string name="doctor_doc_info_remark_ex">你猜你猜我猜</string>
    <string name="doctor_doc_info_age">年龄</string>
    <string name="doctor_doc_info_age_ex">18</string>
    <string name="doctor_doc_info_adds">住址</string>
    <string name="doctor_doc_info_adds_ex">上海</string>
    <string name="doctor_income_prompt">可提现金额</string>
    <string name="doctor_income_count">955</string>
    <string name="doctor_income_unit">元</string>
    <string name="doctor_income_bank_card_zs">招商银行</string>
    <string name="doctor_income_bank_card_ex">**** **** 5452</string>
    <string name="doctor_income_add_bank_card">添加银行卡</string>
    <string name="doctor_income_get_cash">提现记录</string>
    <string name="doctor_income_apply">申请提现</string>
    <string name="version_code">版本：QLXGJ 1.0</string>
    <string name="check_version">新版检测</string>
    <string name="logout">退出</string>
</resources>