<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:orientation="vertical"
    android:background="@color/global_bg">

    <include layout="@layout/title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/top_bar_bg"
        android:padding="30dip"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doctor_income_prompt"
            android:textColor="#88ffffff"
            android:textSize="@dimen/global_third_title_size"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doctor_income_count"
                android:textColor="#ffffff"
                android:textSize="30dip"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doctor_income_unit"
                android:textColor="#ffffff"
                android:paddingLeft="@dimen/five_dip"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout style="@style/LayerMainMyItem"
        android:layout_marginTop="@dimen/global_padding">

        <TextView style="@style/TxtMainMyItem"
            android:text="@string/doctor_income_bank_card_zs"/>

        <TextView style="@style/TxtMainMyItem"
            android:text="@string/doctor_income_bank_card_ex"/>

        <ImageView style="@style/ImageMainMyItemNext" />

    </LinearLayout>

    <LinearLayout style="@style/LayerMainMyItem"
        android:background="@color/transparent">

        <TextView style="@style/TxtMainMyItem"
            android:text="@string/doctor_income_add_bank_card"
            android:textColor="@color/top_bar_bg"
            android:layout_margin="@dimen/global_padding"
            android:background="@color/white"
            android:paddingLeft="@dimen/global_padding"/>

    </LinearLayout>

    <LinearLayout style="@style/LayerMainMyItem">
        <TextView style="@style/TxtMainMyItem"
            android:text="@string/doctor_income_get_cash"/>

        <ImageView style="@style/ImageMainMyItemNext"/>
    </LinearLayout>

    <TextView
        android:id="@+id/next_step"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/doctor_income_apply"
        android:textColor="@color/white"
        android:textSize="@dimen/global_label"
        android:padding="@dimen/global_padding"
        android:background="@drawable/login_button_selector"
        android:layout_margin="@dimen/global_btn_padding"
        android:gravity="center" />

</LinearLayout>
