<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/global_bg"
    android:id="@+id/persion_main">

    <include layout="@layout/title_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/head_img"
                style="@style/LayerMainMyItem"
                android:paddingTop="@dimen/global_padding"
                android:paddingBottom="@dimen/global_padding">
                <ImageView
                    android:id="@+id/head"
                    style="@style/ImageMainMyItemNext"
                    android:layout_width="70dip"
                    android:layout_height="70dip"
                    android:src="@drawable/img_avater_grzx" />

                <TextView style="@style/TxtMainMyItem"
                    android:text="@string/doctor_personal_info_head"
                    android:textColor="@color/grey_deep"
                    android:gravity="right"
                    android:paddingRight="@dimen/global_padding"/>

                <ImageView style="@style/ImageMainMyItemNext" />
            </LinearLayout>

            <View style="@style/divider_line_horizontal" />

            <LinearLayout
                android:id="@+id/name_lay"
                android:tag="realname"
                style="@style/LayerMainMyItem">
                <TextView style="@style/TxtMainMyItem"
                    android:text="@string/doctor_personal_info_name"
                    android:textColor="@color/global_title_color"/>

                <TextView style="@style/TxtMainMyItem"
                    android:id="@+id/name"
                    android:text="@string/doctor_personal_info_name_ex"
                    android:gravity="right"
                    android:textColor="@color/grey_deep"
                    android:paddingRight="@dimen/global_padding"/>

                <ImageView style="@style/ImageMainMyItemNext" />
            </LinearLayout>

            <View style="@style/divider_line_horizontal" />

            <LinearLayout
                android:id="@+id/introduce_lay"
                android:tag="jianjie"
                style="@style/LayerMainMyItem">
                <TextView style="@style/TxtMainMyItem"
                    android:layout_weight="0.4"
                    android:text="@string/doctor_personal_info_intro"
                    android:textColor="@color/global_title_color"/>

                <TextView style="@style/TxtMainMyItem"
                    android:id="@+id/introduce"
                    android:text="@string/doctor_personal_info_intro_ex"
                    android:gravity="right"
                    android:textColor="@color/grey_deep"
                    android:paddingRight="@dimen/global_padding"/>

                <ImageView style="@style/ImageMainMyItemNext" />
            </LinearLayout>

            <View style="@style/divider_line_horizontal" />

            <LinearLayout
                android:id="@+id/skill_lay"
                android:tag="shanchang"
                style="@style/LayerMainMyItem">
                <TextView style="@style/TxtMainMyItem"
                    android:text="@string/doctor_personal_info_skilled"
                    android:layout_weight="0.4"
                    android:textColor="@color/global_title_color"/>

                 <TextView style="@style/TxtMainMyItem"
                    android:id="@+id/skill"
                    android:text="@string/doctor_personal_info_skilled_ex"
                    android:gravity="right"
                    android:textColor="@color/grey_deep"
                    android:paddingRight="@dimen/global_padding"/>

                <ImageView style="@style/ImageMainMyItemNext" />
            </LinearLayout>

            <View style="@style/divider_line_horizontal" />

            <LinearLayout
                android:id="@+id/hospital_lay"
                android:tag="hospital"
                style="@style/LayerMainMyItem">
                <TextView
                    style="@style/TxtMainMyItem"
                    android:text="@string/doctor_personal_info_hospital"
                    android:layout_weight="0.4"
                    android:textColor="@color/global_title_color"/>

                <TextView style="@style/TxtMainMyItem"
                    android:id="@+id/hospital"
                    android:text="@string/doctor_personal_info_hospital_ex"
                    android:gravity="right"
                    android:textColor="@color/grey_deep"
                    android:paddingRight="@dimen/global_padding"/>

                <ImageView style="@style/ImageMainMyItemNext" />
            </LinearLayout>

            <View style="@style/divider_line_horizontal" />

            <LinearLayout
                android:id="@+id/keshi_lay"
                android:tag="keshi"
                style="@style/LayerMainMyItem">
                <TextView style="@style/TxtMainMyItem"
                    android:text="@string/doctor_personal_info_subject"
                    android:layout_weight="0.4"
                    android:textColor="@color/global_title_color"/>

                <TextView style="@style/TxtMainMyItem"
                    android:id="@+id/keshi"
                    android:text="@string/doctor_personal_info_subject_ex"
                    android:gravity="right"
                    android:textColor="@color/grey_deep"
                    android:paddingRight="@dimen/global_padding"/>

                <ImageView style="@style/ImageMainMyItemNext" />
            </LinearLayout>

            <View style="@style/divider_line_horizontal" />

            <LinearLayout
                android:id="@+id/post_lay"
                android:tag="zhicheng"
                style="@style/LayerMainMyItem">
                <TextView style="@style/TxtMainMyItem"
                    android:text="@string/doctor_personal_info_job"
                    android:layout_weight="0.4"
                    android:textColor="@color/global_title_color"/>

                <TextView style="@style/TxtMainMyItem"
                    android:id="@+id/post"
                    android:text="@string/doctor_personal_info_job_ex"
                    android:gravity="right"
                    android:textColor="@color/grey_deep"
                    android:paddingRight="@dimen/global_padding"/>

                <ImageView style="@style/ImageMainMyItemNext" />
            </LinearLayout>

            <View style="@style/divider_line_horizontal" />

            <LinearLayout style="@style/LayerMainMyItem"
                android:visibility="gone">
                <TextView style="@style/TxtMainMyItem"
                    android:id="@+id/shenfen"
                    android:text="@string/doctor_personal_info_certificate"
                    android:textColor="@color/global_title_color"/>

                <ImageView style="@style/ImageMainMyItemNext" />
            </LinearLayout>

            <View style="@style/divider_line_horizontal" />

            <LinearLayout
                android:id="@+id/email_lay"
                android:tag="email"
                style="@style/LayerMainMyItem">

                <TextView style="@style/TxtMainMyItem"
                    android:layout_weight="0.4"
                    android:text="@string/doctor_personal_info_email"/>

                <TextView
                    style="@style/TxtMainMyItem"
                    android:id="@+id/email"
                    android:tag="email"
                    android:gravity="right"
                    android:textColor="@color/grey_deep"
                    android:paddingRight="@dimen/global_padding"/>

                <ImageView style="@style/ImageMainMyItemNext" />
            </LinearLayout>

            <View style="@style/divider_line_horizontal" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
